@startuml

entity "Eleição" as Eleicao {
    + ID: int
    + Nome: string
    + Ano: int
}

entity "Candidato" as Candidato {
    + Matricula: int
    + Nome: string
    + DataNascimento: date
    + CPF: string
    + RG: string
}

entity "Cargo" as Cargo {
    + ID: int
    + Nome: string
}

entity "Eleitor" as Eleitor {
    + TituloEleitor: int
    + Nome: string
    + CPF: string
    + RG: string
    + ZonaID: int
    + SecaoID: int
}

entity "Mesário" as Mesario {
    + ID: int
    + EleitorID: int
    + ZonaID: int
    + SecaoID: int
}

entity "Zona" as Zona {
    + ID: int
    + Nome: string
}

entity "Seção" as Secao {
    + ID: int
    + Nome: string
    + ZonaID: int
}

entity "Voto" as Voto {
    + ID: int
    + EleicaoID: int
    + SecaoID: int
    + CandidatoID: int
    + TipoVoto: string (Branco, Nulo, Valido)
}

entity "Resultado" as Resultado {
    + ID: int
    + EleicaoID: int
    + CargoID: int
    + CandidatoID: int
    + SecaoID: int
    + ZonaID: int
    + Turno: int
    + TotalVotos: int
}

Eleicao -- Candidato
Candidato -- Cargo
Eleicao -- Cargo
Eleitor -- Secao
Secao -- Zona
Mesario -- Eleitor
Mesario -- Zona
Mesario -- Secao
Voto -- Eleicao
Voto -- Secao
Voto -- Candidato
Voto -- Resultado
Resultado -- Secao
Resultado -- Zona
@enduml
